# DevelopersHandbook

./: README.md
CPP/: README.md
CSharp/: basic-concepts.md  competent-with-language.md
CodeKata/: README.md
CodeKata/BubbleSort/: README.md
CodeKata/CPP/InsertionSort/: CMakeLists.txt  README.md
CodeKata/CPP/InsertionSort/src/: insertionsort.cpp  insertionsort.h
CodeKata/CPP/InsertionSort/test/: insertionsort_unittest.cc
CodeKata/Flashlight/: Flashlight.sln  README.md
CodeKata/Heapsort/: Heapsort.sln  README.md
CodeKata/InsertionSort/: InsertionSort.sln
CodeKata/MergeSort/: MergeSort.sln  README.md
CodeKata/Permutation/: Permutation.sln  README.md
CodeKata/PotterKata/: README.md  TestResult.xml
CodeKata/QueueUsingStacks/: QueueUsingStacks.sln  README.md
CodeKata/QuickSort/: README.md
CodeKata/RgbToHex/: RgbToHex.sln
CodeKata/SelectionSort/: README.md  SelectionSort.sln
CodeKata/SimpleCalcuator/: SimpleCalcuator.sln
CodeKata/SubstringOfIdenticalCharacters/: README.md  SubstringOfIdenticalCharacters.sln
CodeKata/TinyMaze/: README.md
CodeKata/ValidParentheses/: README.md  ValidParentheses.sln
Git/: competent-with-git.md
additional-exercises/: README.md
additional-github-resources/: README.md
additional-kata/: README.md
algorithms/: README.md
big-o/: README.md
books/: README.md
data-structures/: README.md
design-patterns/: README.md
exersice-solutions/: README.md
languages/: README.md
programming-concepts/: README.md
programming-languages/: README.md
robotics/: README.md
solutions/: README.md
(+416 files in other folders)
